--- a/package.json
+++ b/package.json
@@ -21,12 +21,14 @@
     "@vue/cli-service": "^4.0.0",
     "coffee-loader": "^0.9.0",
     "coffeescript": "^2.4.1",
+    "json-loader": "^0.5.7",
     "normalize-css": "^2.3.1",
     "pug": "^2.0.4",
     "pug-plain-loader": "^1.0.0",
     "sass": "^1.19.0",
     "sass-loader": "^8.0.0",
-    "vue-template-compiler": "^2.6.10"
+    "vue-template-compiler": "^2.6.10",
+    "yaml-loader": "^0.5.0"
   },
   "postcss": {
     "plugins": {
