--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "test": "vue-cli-service build --modern"
   },
   "dependencies": {
+    "@babel/compat-data": "^7.10.1",
     "core-js": "^3.3.2",
     "register-service-worker": "^1.6.2",
     "vue": "^2.6.10",
