Cambiado checkbox por boton para agregar/eliminar curso.

--- a/public/horarios/2020_1_fps_ingenieriadesistemas.yaml
+++ b/public/horarios/2020_1_fps_ingenieriadesistemas.yaml
@@ -495,6 +495,11 @@ años:
             - Lu1640
             - Lu1740
       Laboratorio:
+        A:
+          Docente: Juan C. Juarez
+          Horas:
+            - Lu0850
+            - Lu0940
         C:
           Docente: T. Ramires (?)
           Horas:
