--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "vue": "^3.0.0-rc.4",
     "vue-router": "^4.0.0-alpha.6",
     "vuex": "^4.0.0-alpha.1",
+    "webpack": "^4.43.0",
     "yaml": "^1.10.0",
     "yaml-loader": "^0.6.0"
   },
