--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "coffee-loader": "^1.0.0",
     "coffeescript": "^2.5.1",
     "json-loader": "^0.5.7",
-    "normalize.css": "^8.0.1",
+    "normalize-css": "^2.3.1",
     "pug": "2.0.4",
     "pug-plain-loader": "^1.0.0",
     "vue": "^3.0.0-rc.4",
