--- a/public/horarios/2020_1_fps_ingenieriadesistemas.yaml
+++ b/public/horarios/2020_1_fps_ingenieriadesistemas.yaml
@@ -1,4 +1,10 @@
 titulo: Horarios 2020-1, Ingeniería de Sistemas.
+descripcion: |
+  Este horario esta parcialmente completo. Los datos se obtuvieron de
+  https://drive.google.com/file/d/1DqAkbDtcVjAWhEb6YwMpFWUkXGpgeQt1/view
+  <br>
+  <br>
+  Ultima actualizacion: 26 de abril de 2020
 años:
   1er año:
     Matematica Basica:
